# RayBullet

./: CMakeLists.txt  README.md  build.bat  build.sh
include/: ball.hpp  config.h  config.h.in  game.hpp  physics.hpp
resource/: soccerball.glb
source/: ball.cpp  game.cpp  main.cpp  physics.cpp
